[x] - fix scroll on mobile

--- a/src/pages/initial/community.scss
+++ b/src/pages/initial/community.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   &__container {
-    padding: $double-gap 0;
+    padding: 100px 0 $double-gap;
     width: 100%;
     display: flex;
     flex-direction: column;
